--- a/public/styles/nextScene.css
+++ b/public/styles/nextScene.css
@@ -1,92 +1,93 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: url('../images/background.avif') no-repeat center center fixed;
-    background-size: cover;
-    color: #fff;
-  }
-  
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: url('../images/background.avif') no-repeat center center fixed;
+  background-size: cover;
+  color: #fff;
+}
+
 .header {
-  position: absolute;
-  top: 10px;
-  left: 20px;
-  font-size: 24px;
+position: absolute;
+top: 10px;
+left: 20px;
+font-size: 24px;
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  padding: 100px 20px; /* Space below the heading */
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap: 20px;
+padding: 100px 20px; /* Space below the heading */
 }
 
 .scene, .question {
-  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
-  border-radius: 10px;
-  padding: 20px;
+background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+border-radius: 10px;
+padding: 20px;
 }
 
 .options {
-  margin-top: 20px;
+margin-top: 20px;
 }
 
 .option {
-  background-color: #444;
-  padding: 10px;
-  margin-bottom: 10px;
-  cursor: pointer;
-  border-radius: 5px;
-  text-align: center;
+background-color: #444;
+padding: 10px;
+margin-bottom: 10px;
+cursor: pointer;
+border-radius: 5px;
+text-align: center;
 }
 
 .option:hover {
-  background-color: #555;
+background-color: #555;
 }
 
 button {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+display: block;
+margin-top: 20px;
+padding: 10px 20px;
+background-color: #007bff;
+color: #fff;
+border: none;
+border-radius: 5px;
+cursor: pointer;
 }
 
 button:disabled {
-  background-color: #666;
-  cursor: not-allowed;
+background-color: #666;
+cursor: not-allowed;
 }
 
 .modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgba(0, 0, 0, 0.5);
 }
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  height: 50%;
+background-color: #58d68d;
+margin: 15% auto;
+padding: 20px;
+border: 1px solid #0c0606;
+border-radius: 15px;
+width: 70%;
+height: 50%;
 }
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
+color: #aaa;
+float: right;
+font-size: 28px;
+font-weight: bold;
+cursor: pointer;
 }
 .close:hover,
 .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+color: black;
+text-decoration: none;
+cursor: pointer;
 }
