--- a/views/nextScene.ejs
+++ b/views/nextScene.ejs
@@ -24,8 +24,8 @@
   </div>
   <div id="dice-popup" class="modal" style="display:none;">
     <div class="modal-content">
-      <span class="close" onclick="closeDicePopup()">&times;</span>
-      <iframe src="" id="dice-iframe" style="width:100%; height:100%; border:none;"></iframe>
+      <!-- <span class="close" onclick="closeDicePopup()">&times;</span> -->
+      <iframe src="" id="dice-iframe" style="width:100%; height:90%; border:none;"></iframe>
     </div>
   </div>
 
