--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <div class="container">
         <!-- First Column -->
         <div class="column">
-            <img src="/images/newfate2.png" alt="Logo">
+            <img src="/images/whimsydimsylogo.png" alt="Logo">
         </div>
         <!-- Second Column -->
         <div class="column">
