--- a/views/nextScene.ejs
+++ b/views/nextScene.ejs
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/styles/nextScene.css">
 </head>
 <body>
-  <div class="header">
-    <h1>Interactive Game</h1>
+  <div class="game-container">
+      <img src="/images/croppedlogo.png" alt="Whimsy Dimsy Logo" class="game-logo">
   </div>
   <div class="container">
     <div class="scene">
