--- a/views/gameEntry.ejs
+++ b/views/gameEntry.ejs
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="/styles/gameEntry.css">
 </head>
 <body>
+    <div class="game-container">
+        <img src="/images/croppedlogo.png" alt="Game Logo">
+    </div>    
     <div class="container">
         <!-- First Column: Game Instructions -->
         <div class="column">
