--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,11 +8,11 @@
     <div class="container">
         <!-- First Column -->
         <div class="column">
-            <img src="/images/whimsydimsylogo.png" alt="Logo">
+            <img src="/images/croppedlogo.png" alt="Logo">
         </div>
         <!-- Second Column -->
         <div class="column">
-            <h1>About The Game</h1>
+            <!-- <h1>Welcome To WhimsyDimsy</h1> -->
             <p>Step into a world where imagination knows no bounds—reshape destinies, rewrite narratives, and explore limitless realms, from enchanting fantasy worlds to vibrant real-life settings. Every choice you make sparks a new adventure, offering endless possibilities and unique paths to uncover!</p>
         </div>
         <!-- Third Column -->
