--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,19 +6,21 @@
 </head>
 <body>
     <div class="container">
-        <!-- First Column -->
+        <!-- First Column - Logo -->
         <div class="column">
             <img src="/images/croppedlogo.png" alt="Logo">
         </div>
-        <!-- Second Column -->
+        <!-- Merged Second and Third Column -->
         <div class="column">
-            <!-- <h1>Welcome To WhimsyDimsy</h1> -->
             <p>Step into a world where imagination knows no bounds—reshape destinies, rewrite narratives, and explore limitless realms, from enchanting fantasy worlds to vibrant real-life settings. Every choice you make sparks a new adventure, offering endless possibilities and unique paths to uncover!</p>
-        </div>
-        <!-- Third Column -->
-        <div class="column">
-            <button class="button-watch" onclick="window.location.href='https://www.youtube.com';">Watch Trailer</button>
-            <button class="button-signin" onclick="window.location.href='/login';">Sign In</button>
+            <div class="button-container">
+                <div class="button-column">
+                    <button class="button-watch" onclick="window.location.href='https://www.youtube.com';">Trailor</button>
+                </div>
+                <div class="button-column">
+                    <button class="button-signin" onclick="window.location.href='/login';">Sign In</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
